# netm

./: .gitignore  LICENSE  README.nt  netm.cabal
fs/etc/init.d/: netm
fs/etc/local.d/: netm.start
fs/etc/netm/_example/: wpa_supplicant.conf
fs/etc/netm/_helpers/: Common  chooseAP  common  utils.sh
fs/usr/share/bash-completion/completions/: netu
fs/usr/share/zsh/site-functions/: _netm  _netu
src/: Utils.hs
src/CMD/: Utils.hs
src/CMD/New/: Main.hs
src/CMD/Status/: Main.hs
src/Cmd/: Utils.hs
src/Cmd/Complete/: Main.hs
src/Cmd/Down/: Main.hs
src/Cmd/New/: Main.hs
src/Cmd/Status/: Main.hs
src/Cmd/Up/: Main.hs
src/Cmd/Utils/: Args.hs  Common.hs  Hierarchy.hs  Misc.hs  Options.hs
src/Try/: Main.hs  README.nt
src/WPA/: README.nt
src/WPA/Daemon/: Main.hs
src/WPA/Start/: Main.hs
src/down/: Main.hs
src/new/: Main.hs
src/status/: Main.hs
src/up/: Main.hs
