name:                netm
version:             0.1.0
synopsis:            ...
license:             BSD3
license-file:        LICENSE
author:              Keilys
maintainer:          krantadan@mail.ru
category:            Network
build-type:          Simple
extra-source-files:  README.nt
cabal-version:       >=1.10


library
  default-language: Haskell2010
  exposed-modules: Utils
  hs-source-dirs: src/CMD
  build-depends:
      base
    , containers >= 0.5
    , process >= 1.2
    , Glob >= 0.7
    , filepath >= 1.1
    , split >= 0.2
    , ansi-terminal >= 0.6


executable netu
  default-language: Haskell2010
  hs-source-dirs: src/CMD/Up
  main-is: Main.hs
  build-depends:
      base
    , netm
    , containers >= 0.5
    , Glob >= 0.7
    , process >= 1.2


executable netd
  default-language: Haskell2010
  hs-source-dirs: src/CMD/Down
  main-is: Main.hs
  build-depends:
      base
    , netm
    , containers >= 0.5
    , Glob>=0.7
    , process >= 1.2


executable nets
  default-language: Haskell2010
  hs-source-dirs: src/CMD/Status
  main-is: Main.hs
  build-depends:
      base
    , netm
    , containers >= 0.5


executable netn
  default-language: Haskell2010
  hs-source-dirs: src/CMD/New
  main-is: Main.hs
  build-depends:
      base
    , netm
    , containers >= 0.5


executable wpa_daemon
  default-language: Haskell2010
  hs-source-dirs: src/WPA/Daemon
  main-is: Main.hs
  ghc-options: -threaded
  build-depends:
      base
    , split >= 0.2
    , hslogger >= 1.2
    , unix >= 2.6
    , process >= 1.1


executable wpa_start
  default-language: Haskell2010
  hs-source-dirs: src/WPA/Start
  main-is: Main.hs
  build-depends:
      base
    , process >= 1.1
