name:                netm
version:             0.1.0
synopsis:            ...
license:             MIT
license-file:        LICENSE
author:              Yevgeny Zharov
maintainer:          krantadan@mail.ru
category:            Network
build-type:          Simple
extra-source-files:  README.nt
cabal-version:       >=1.10


library
  default-language: Haskell2010
  exposed-modules: Utils
  hs-source-dirs: src/Cmd
  build-depends:
      base
    , process >= 1.2
    , Glob
    , filepath
    , split
    , ansi-terminal
    , directory
    , transformers
    , silently


-- ===============
--       Cmd
-- ===============

executable netu
  default-language: Haskell2010
  hs-source-dirs: src/Cmd/Up
  main-is: Main.hs
  build-depends:
      base
    , netm
    , transformers

executable netd
  default-language: Haskell2010
  hs-source-dirs: src/Cmd/Down
  main-is: Main.hs
  build-depends:
      base
    , netm
    , transformers

executable nets
  default-language: Haskell2010
  hs-source-dirs: src/Cmd/Status
  main-is: Main.hs
  build-depends:
      base
    , netm

executable netn
  default-language: Haskell2010
  hs-source-dirs: src/Cmd/New
  main-is: Main.hs
  build-depends:
      base
    , netm
    , transformers


-- ===============
--       WPA
-- ===============

executable wpa_daemon
  default-language: Haskell2010
  hs-source-dirs: src/WPA/Daemon
  main-is: Main.hs
  ghc-options: -threaded
  build-depends:
      base
    , split
    , hslogger
    , unix
    , process >= 1.1

executable wpa_start
  default-language: Haskell2010
  hs-source-dirs: src/WPA/Start
  main-is: Main.hs
  build-depends:
      base
    , process


-- ===============
--      Shell
-- ===============

executable try
  default-language: Haskell2010
  hs-source-dirs: src/Try
  main-is: Main.hs
  build-depends:
      base
    , process

executable netm_complete_conf
  default-language: Haskell2010
  hs-source-dirs: src/Cmd/Complete
  main-is: Main.hs
  build-depends:
      base
    , netm
